renovated for G1GC with Java 9 and removed parallel and CMS support